// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChooseLineDropdown /> Opens dropdown when clicked and shows all lines 1`] = `
<DocumentFragment>
  <div
    class="input-element relative h-full"
    id="listbox"
  >
    <button
      aria-haspopup="true"
      class="flex h-full w-full items-center text-left focus:outline-none"
      data-testid="chooseLineDropdown1"
      id="headlessui-listbox-button-1"
      type="button"
    >
      <div
        class="w-full"
      >
        routes.chooseLine
      </div>
      <i
        class="icon-arrow ml-auto text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Opens dropdown when clicked and shows all lines 2`] = `
<DocumentFragment>
  <div
    class="input-element relative h-full"
    id="listbox"
  >
    <button
      aria-haspopup="true"
      class="flex h-full w-full items-center text-left focus:outline-none"
      data-testid="chooseLineDropdown1"
      id="headlessui-listbox-button-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <i
        class="icon-arrow ml-auto text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Opens dropdown when clicked and shows all lines 3`] = `
<DocumentFragment>
  <div
    class="input-element relative h-full"
    id="listbox"
  >
    <button
      aria-controls="headlessui-listbox-options-3"
      aria-expanded="true"
      aria-haspopup="true"
      class="flex h-full w-full items-center text-left focus:outline-none"
      data-testid="chooseLineDropdown1"
      id="headlessui-listbox-button-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <i
        class="icon-arrow ml-auto text-tweaked-brand transition duration-150 ease-in-out -rotate-180"
        style="font-size: 10px;"
      />
    </button>
    <ul
      aria-activedescendant="headlessui-listbox-option-4"
      aria-labelledby="headlessui-listbox-button-1"
      class="absolute left-0 mt-2 w-full rounded-b-md border border-black border-opacity-20 bg-white shadow-md focus:outline-none transition ease-out duration-100 opacity-0 scale-95"
      id="headlessui-listbox-options-3"
      role="listbox"
      tabindex="0"
    >
      <div>
        <li
          aria-selected="true"
          id="headlessui-listbox-option-4"
          role="option"
          tabindex="-1"
        >
          <span
            class="bg-background flex group text-left px-2 py-2 focus:outline-none"
          >
            1 (Line1 name)
          </span>
        </li>
        <li
          id="headlessui-listbox-option-5"
          role="option"
          tabindex="-1"
        >
          <span
            class=" flex group text-left px-2 py-2 focus:outline-none"
          >
            2 (Line2 name)
          </span>
        </li>
      </div>
    </ul>
  </div>
</DocumentFragment>
`;
